# mozzy

./: .gitignore  README.md  flash.ps1  west.yml
.github/workflows/: build-scratch.yml  firmware-artifact-branch.yml  mobile.yml  tools.yml
ai-generated/: ai_HANDOFF.md
app_mobile/: .gitignore  README.md  pubspec.yaml
app_mobile/android/: build.gradle
app_mobile/test/: device_page_test.dart  drive_files_page_test.dart  scan_page_test.dart  wr_audio_packet_test.dart  wr_drive_uploader_test.dart  wr_opus_decoder_test.dart  wr_packet_loss_test.dart  wr_packet_sink_test.dart  wr_storage_client_test.dart  (+1 more)
docs/: manual.html  phase5-quickstart.md  wearable-recorder-spec.md
firmware/: .actions-trigger-20260612.txt  CMakeLists.txt  Kconfig  prj.conf
firmware/boards/: xiao_ble_nrf52840_sense.overlay
firmware/patches/: 0001-sd-fix-ctrl-sync-missing-break.patch  README.md
firmware/src/: ble.c  ble.h  boot_cmd.c  boot_cmd.h  config.h  led.c  led.h  main.c  sd.c  sd.h  wr_audio.c  wr_audio.h  wr_battery.c  wr_battery.h  wr_ble_audio.c  wr_ble_audio.h  wr_button.c  wr_button.h  wr_codec.c  wr_codec.h  wr_gain_control.c  wr_rec_control.c  wr_recorder.c  wr_recorder.h  wr_storage_service.c  wr_storage_service.h  wr_time_sync.c
firmware/src/lib/opus-1.2.1/: CMakeLists.txt
tools/: ble_audio_receiver.py  ble_connect.py  ble_gain_control.py  ble_rec_control.py  ble_scan.py  mobile_app.py  opus_to_wav.py  read_serial.ps1  requirements.txt  wr_storage_client.py
user-input/: user_mozzy_request_20260607.md
web-source/: web_omi_gain_reference_20260607.md
(+14 files in other folders)
